# gpuframework_2017_2018

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  GPUProgramming.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Modules/: FindFreeImage.cmake  FindGLEW.cmake  FindGLFW.cmake  FindOpenGL.cmake
lib/: FreeImage.lib  FreeImagePlusd.lib  FreeImaged.lib
src/: CMakeLists.txt  cmake_install.cmake
src/GPUSample/: CMakeLists.txt  CommonCL.h  ExamplesCL_CPP.cpp  ExamplesCL_CPP.h  ExamplesCL_C_API.cpp  ExamplesCL_C_API.h  GPUSample.vcxproj  GPUSample.vcxproj.filters  Main.cpp  cmake_install.cmake
src/GPUSample/Filters/: Desaturate_CPU.cpp  Desaturate_CPU.h  Desaturate_GPU.cpp  Desaturate_GPU.h  ED_CPU.cpp  ED_CPU.h  ED_GPU.cpp  ED_GPU.h  ED_GPU_Global.cpp  ED_GPU_Global.h  EdgeFilterGPU.cpp  EdgeFilterGPU.h  GB_CPU.cpp  GB_CPU.h  GB_GPU.cpp  GB_GPU.h  GB_GPU_Global.cpp  GB_GPU_Global.h  GS_CPU.cpp  GS_CPU.h  GS_GPU.cpp  GS_GPU.h  H_CPU.cpp  H_CPU.h  H_GPU.cpp  H_GPU.h  Hist.cl  Invert_CPU.cpp  Invert_CPU.h  Invert_GPU.cpp  Invert_GPU.h  Median_CPU.cpp  Median_CPU.h  Median_GPU.cpp  Median_GPU.h  Noise_GPU.cpp  Noise_GPU.h  Sharpen_CPU.cpp  Sharpen_CPU.h  Sharpen_GPU.cpp  (+4 more)
src/GPUSample/GPUSample.dir/Debug/GPUSample.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/GPUSample/GPUSample.dir/Release/GPUSample.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GPUSample.lastbuildstate  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/GPUSample/temp files/: ED_GPU - kopie.cpp  GB_GPU - kopie.cpp  H_CPU - nice effect 1.cpp  H_CPU - nice effect 2.cpp  H_CPU - nice effect 3.cpp  H_CPU - nice effect 4.cpp  H_CPU - nice effect 5.cpp  H_GPU - kopie (2).cpp  H_GPU - kopie.cpp  H_GPU -effect.cpp  Hist - kopie (2).cl  Hist - kopie.cl  Hist -effect.cl  Sharpen_GPU - kopie.cpp
src/Renderer/: CMakeLists.txt  FilterManager.cpp  FilterManager.h  Framework.cpp  Framework.h  Image.cpp  Image.h  ImageFilter.h  OpenCL.h  Renderer.vcxproj  Renderer.vcxproj.filters  cmake_install.cmake
src/Renderer/Debug/: Renderer.lib
src/Renderer/Release/: Renderer.lib
src/Renderer/Renderer.dir/Debug/Renderer.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
src/Renderer/Renderer.dir/Release/Renderer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
src/Renderer/include/: RendererAPI.h
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.read.1.tlog  custombuild.write.1.tlog
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog
